# FactorForge-FF-

./: .gitignore  README.md  backtest_results_v2.json  live_performance_summary.json  live_portfolio_history.csv  portfolio_history_v2.csv  test_cpp_integration.py  test_trades.py  trade_history_v2.csv
PYTHON Module/: realistic_backtest_system_v2.py
config/: api_keys.yaml  config.yaml
cpp/: AlpacaTradingInterface.cpp  EnhancedData.h  EnhancedRiskManager.cpp  EnhancedRiskManager.h  EnsembleMLSystem.cpp  EnsembleMLSystem.h  ExecutionEngine.h  FeatureExtractor.h  LiveTradingEngine.h  OrderManager.cpp  bindings.cpp
python/: requirements.txt
python/backtest/: realistic_backtest_system_v2.py
python/core/: enhanced_data.py
python/live/: alpaca_trading_interface.py  live_trading_engine.py  run_live_trading.py
src/cpp/: CMakeLists.txt
src/cpp/src/: AdvancedFeatures.cpp  AdvancedFeatures.h  EnhancedData.cpp  EnhancedRiskManager.cpp  EnhancedRiskManager.h  ExecutionEngine.cpp  FeatureExtractor.cpp  LiveTradingEngine.cpp  OrderManager.h  RealisticBacktestSystem.cpp  RealisticBacktestSystem.h  RiskManager.cpp  RiskManager.h  SignalGenerator.cpp  SignalGenerator.h  bindings.cpp  main.cpp
src/py/backtest/: engine.py  engine_legacy.py  engine_modular.py  engine_modular_backtest.py  evaluator.py
src/py/common/: alpha_models.py  data_pipeline.py  execution_handlers.py  report_generator.py  risk_evaluator.py
src/py/core/: ensemble_ml_system.py
src/py/live/: alpaca_trading_interface.py  live_trading_engine.py  run_trading.py
